--- a/client/gorobots.html
+++ b/client/gorobots.html
@@ -27,7 +27,8 @@
                     var x = data['position']['x'];
                     var y = data['position']['y'];
 
-                    ctx.clearRect ( 0 , 0 , 450 , 350 );
+                    if (index == 0)
+                        ctx.clearRect ( 0 , 0 , 450 , 350 );
 
                     ctx.fillStyle = colors[index];
                     ctx.fillRect (x, y, 10, 10);
