--- a/client/gorobots.html
+++ b/client/gorobots.html
@@ -11,15 +11,36 @@
   </head>
   <body onload="init();">
     <canvas id="tutorial" width="450" height="350"></canvas>
-    <textarea cols=50 rows=26 id="robot">function (data){
-        // console.log(data);
+    <textarea cols=50 rows=26 id="robot">function robot(data){
+        //console.log(data);
+        var instructions = {};
+        var x,y;
+        if (data && 'move_to' in data){
+            x = data['move_to']['x'];
+            y = data['move_to']['y'];
 
-        var instructions = {
-            "move_to": {"x": 0, "y": 0},
-            "fire_at": {"x": 100, "y": 100}};
+            if (data['position']['x'] == data['move_to']['x'] &&
+                data['position']['y'] == data['move_to']['y']){
+                x = Math.floor(Math.random() * 450);
+                y = Math.floor(Math.random() * 400);
+                console.log("X: " + x + ", Y: " + y);
+                instructions['move_to'] = {"x": x, "y": y};
+            }
+            else{
+                instructions['move_to'] = {"x": x, "y": y};
+            }
+        }
+        else{
+            x = Math.floor(Math.random() * 450);
+            y = Math.floor(Math.random() * 400);
+            instructions['move_to'] = {"x": x, "y": y};
+        }
 
         return instructions;
     }
+
+
+
     </textarea>
     <a href="#" onclick="eval_robot();">Run</a>
     <div id="output"></div>
