Add an FOV clip and some toggles for FOV and debug draw

--- a/client/gorobots.html
+++ b/client/gorobots.html
@@ -59,9 +59,10 @@
     }
     </pre>
 
-    <canvas id="battlefield" width="800" height="550"></canvas>
+    <canvas id="battlefield"></canvas>
 
-    <a href="#" id="check_code" onclick="eval_robot();">Check Code</a>
+    <a href="#" id='debug_toggle'>Toggle Debug</a>
+    <a href="#" id='fov_toggle'>Toggle FOV</a>
     <pre id="players"></pre>
     <div id="output"></div>
 
