Allow client to set robot properties and use them on the server

--- a/client/gorobots.html
+++ b/client/gorobots.html
@@ -30,10 +30,10 @@
     <pre id="editor">function robot(){
     var setup = function(map){
         return {
-            "health": 100,
-            "speed": 20,
-            "weapon_radius": 10,
-            "scanners": 30
+            "hp": 100,
+            "speed": 100,
+            "weapon_radius": 35,
+            "scanner_radius": 250
         }
     }
 
