parameterized the server name

--- a/client/gorobots.html
+++ b/client/gorobots.html
@@ -84,5 +84,6 @@
     <a href="#" id='fov_toggle'>Toggle FOV</a>
     <pre id="players"></pre>
     <div id="output"></div>
+    <div id="config"><form id="form"><input size='100' id='server'></form></div>
   </body>
 </html>
